data/derived/fa15/progs/unify/prog3796.ml.out
Characters 140-162:
  | 2 -> buildSine(build(rand, depth-1))
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
